--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "discord.js": "^14.21.0",
         "dotenv": "^16.0.0",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "better-sqlite3": "^8.0.1"
     }
 }
