--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "dependencies": {
+        "better-sqlite3": "^8.0.1",
         "discord.js": "^14.21.0",
         "dotenv": "^16.0.0",
         "express": "^5.1.0",
-        "better-sqlite3": "^8.0.1"
+        "puppeteer": "^24.12.1"
     }
 }
