--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "discord.js": "^14.21.0",
         "dotenv": "^16.0.0",
         "express": "^5.1.0",
-        "puppeteer": "^24.12.1"
+        "puppeteer": "^24.12.1",
+        "ws": "^8.18.3"
     }
 }
