--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "discord.js": "^14.21.0",
-    "dotenv": "^16.0.0",
     "express": "^5.1.0",
     "puppeteer": "^24.12.1",
     "typescript": "^5.8.3",
     "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "bun-types": "^1.2.19"
   }
 }
