Prepare for v1.0.0 release
  - Rename DASHBOARD_LANGUAGE to LANGUAGE for broader scope
  - Add comprehensive translations for all console logs and API responses
  - Remove debug endpoint for production
  - Add MIT License
  - Update README with new LANGUAGE env variable

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A Discord bot for automatic mute/unmute control in Trouble in Terrorist Town (Garry's Mod) with statistics tracking and web dashboard.",
   "author": "Oudstand",
+  "license": "MIT",
   "main": "app.ts",
   "scripts": {
     "prestart": "bun run build:frontend",
