--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "build:frontend": "bun build ./public/ts/dashboard.ts --outdir ./public/js --minify",
     "watch:frontend": "bun build ./public/ts/dashboard.ts --outdir ./public/js --watch --minify",
     "build:favicon": "node -e \"const fs = require('fs'); const data = fs.readFileSync('public/favicon.ico', 'base64'); fs.writeFileSync('favicon-embedded.ts', 'export const faviconBase64 = \\\"' + data + '\\\";');\"",
-    "build:exe": "bun build ./app.ts --compile --windows-icon=icon.ico --outfile \"TTT Discord Bot.exe\"",
+    "build:exe": "bun build ./app.ts --compile --windows-icon=icon.ico --external electron --outfile \"TTT Discord Bot.exe\"",
     "build": "bun run build:frontend && bun run build:favicon && bun run build:exe"
   },
   "dependencies": {
+    "@puppeteer/browsers": "^2.10.13",
     "discord.js": "^14.21.0",
-    "edge-paths": "^3.0.5",
     "express": "^5.1.0",
-    "puppeteer-core": "^23.11.1",
+    "puppeteer-core": "^24.29.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
